# fastapi_toy

./: .gitignore  README.md  pyproject.toml
docs/: poetry_settings.md
src/: sample_app.py
