[tool.poetry]
name = "fastapi_toy"
version = "0.1.0"
description = ""
authors = ["yusuke.shirai1 <yusuke.shirai1@persol.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
